--- a/Lots-of-Checklists/App.config
+++ b/Lots-of-Checklists/App.config
@@ -12,7 +12,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="ChecklistsEntities" connectionString="metadata=res://*/ChecklistsModel.csdl|res://*/ChecklistsModel.ssdl|res://*/ChecklistsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Checklists;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="ChecklistsEntities" connectionString="metadata=res://*/Models.ChecklistsModel.csdl|res://*/Models.ChecklistsModel.ssdl|res://*/Models.ChecklistsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Checklists;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
