Generate new updated Database Model for application called LotsOfChecklistsModel

--- a/Lots-of-Checklists/App.config
+++ b/Lots-of-Checklists/App.config
@@ -12,7 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="ChecklistsEntities" connectionString="metadata=res://*/Models.ChecklistsModel.csdl|res://*/Models.ChecklistsModel.ssdl|res://*/Models.ChecklistsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Checklists;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="ChecklistsEntities" connectionString="metadata=res://*/Models.ChecklistsModel.csdl|res://*/Models.ChecklistsModel.ssdl|res://*/Models.ChecklistsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Checklists;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="LotsOfChecklistsContext" connectionString="metadata=res://*/Models.LotsOfChecklistsModel.csdl|res://*/Models.LotsOfChecklistsModel.ssdl|res://*/Models.LotsOfChecklistsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=LotsOfChecklists;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
