--- a/Lots-of-Checklists/Lots-of-Checklists.csproj
+++ b/Lots-of-Checklists/Lots-of-Checklists.csproj
@@ -71,8 +71,8 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -92,8 +92,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ContainerConfig.cs" />
+    <Compile Include="Core\ContainerConfig.cs" />
     <Compile Include="Core\ChecklistRepository.cs" />
+    <Compile Include="Core\ChecklistService.cs" />
+    <Compile Include="Core\IChecklistRepository.cs" />
+    <Compile Include="Core\IChecklistService.cs" />
     <Compile Include="Models\Checklists.cs">
       <DependentUpon>LotsOfChecklistsModel.tt</DependentUpon>
     </Compile>
